refactor: WinningLotto 생성자 파라미터 null 처리 추가
- null 처리 및 중복 관련 테스트 추가
- 객체의 이름 WinningLotto 와 인스턴스 변수인 지난 주 당첨번호의 이름 winningLotto 를 구분하기 위해 인스턴스 변수명 수정