@@ -5,6 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -13,12 +14,12 @@ public class ProfitTest {
 
     @BeforeEach
     void init() {
-        Lotto lotto1 = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6));
-        Lotto lotto2 = new Lotto(Arrays.asList(2, 3, 4, 5, 6, 7));
-        Lotto lotto3 = new Lotto(Arrays.asList(3, 4, 5, 6, 7, 8));
-        Lottos lottos = new Lottos(Arrays.asList(lotto1, lotto2, lotto3));
+        Lotto lotto1 = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+        Lotto lotto2 = new Lotto(List.of(2, 3, 4, 5, 6, 7));
+        Lotto lotto3 = new Lotto(List.of(3, 4, 5, 6, 7, 8));
+        Lottos lottos = new Lottos(List.of(lotto1, lotto2, lotto3));
 
-        Lotto winLotto = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6));
+        Lotto winLotto = new Lotto(List.of(1, 2, 3, 4, 5, 6));
         Ball bonusBall = new Ball(7);
         WinningLotto winningLotto = new WinningLotto(winLotto, bonusBall);
 
